@@ -750,7 +750,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 		</dl>
 		<dl>
 			<dt>meta_predicate_term ::=</dt>
-				<dd>"<code>::</code>" | "<code>*</code>" | "<code>/</code>" | <em>integer</em> |</dd>
+				<dd><em>integer</em> | "<code>::</code>" | "<code>^</code>" | "<code>/</code>" |</dd>
+				<dd>"<code>*</code>" |</dd>
 				<dd>"<code>[0]</code>" | "<code>[/]</code>"</dd>
 		</dl>
 		<dl>
@@ -1010,7 +1011,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: June 29, 2011</span>
+		<span>Last updated on: August 4, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
