@@ -124,10 +124,12 @@ The meta-predicate mode arguments in this directive have the following meaning:
 		<dd>Argument that is context-aware but that will not be called as a goal.</dd>
 	<dt><code>/</code></dt>
 		<dd>Predicate indicator.</dd>
+	<dt><code>^</code></dt>
+		<dd>Existentially quantified goal (<code>Vars^Goal</code>).</dd>
 	<dt><code>[0]</code></dt>
 		<dd>List of goals.</dd>
 	<dt><code>[/]</code></dt>
-		<dd>List of predicate indicators (Functor/Arity).</dd>
+		<dd>List of predicate indicators (<code>Functor/Arity</code>).</dd>
 	<dt><code>*</code></dt>
 		<dd>Normal argument.</dd>
 </dl>
@@ -768,7 +770,7 @@ Currently, there is no clean workaround for calling non-standard Prolog built-in
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: May 31, 2011</span>
+		<span>Last updated on: August 4, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="categories.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="inheritance.html">next</a></span><br/>
